Normalize ul spacing Fix menu spacing

--- a/app/styles/_layout/_l-header.scss
+++ b/app/styles/_layout/_l-header.scss
@@ -36,6 +36,7 @@
     font-size: 1.1em;
     list-style: none;
     margin-right: 1vw;
+    margin-top: 1vw;
     padding: 0;
     white-space: nowrap;
   }
