--- a/app/styles/_vendor/_normalize.scss
+++ b/app/styles/_vendor/_normalize.scss
@@ -36,6 +36,11 @@ h5 {
   padding: 0;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 /* HTML5 display definitions
    ========================================================================== */
 
